# backend_sloco_recommendation_service

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-production.yml
artifacts/: location_embeddings_20260531T173837Z_metadata.csv
deploy/: docker-compose.production.yml
docs/: README.md  TASKS_1_embedding_recommender_endpoint.md
src/recommendation_service/: config.py  logging.py  main.py
src/recommendation_service/algorithms/: __init__.py  embedding_recommender.py  registry.py
src/recommendation_service/health/: __init__.py  router.py  schemas.py
src/recommendation_service/recommendations/: __init__.py  router.py  schemas.py  service.py
tests/: conftest.py  test_health.py  test_recommendations.py
tests/fixtures/: tiny_embeddings.npy  tiny_metadata.csv
